current version
===============



SCIP version 0.82
=================

compiling:
- removed ncurses and pthread libraries from the Makefile; pthread is now only linked if CPLEX is used

interface:
- new method SCIPsolveProbingLPWithPricing()
- new methods SCIPcolGetMinPrimsol() and SCIPcolGetMaxPrimsol()
- new method SCIPgetColRedcost()
- new method SCIPvarGetRootRedcost()
- new methods SCIPgetLPRootObjval(), SCIPgetLPRootColumnObjval(), and SCIPgetLPRootLooseObjval()
- new methods SCIPchgVarLbRoot() and SCIPchgVarUbRoot()
- new method SCIPinRepropagation()
- new methods SCIPgetAvgPseudocostScore(), SCIPgetAvgPseudocostScoreCurrentRun(), SCIPgetAvgConflictScore(),
  SCIPgetAvgConflictScoreCurrentRun(), SCIPgetAvgInferenceScore(), SCIPgetAvgInferenceScoreCurrentRun(),
  SCIPgetAvgCutoffScore(), and SCIPgetAvgCutoffScoreCurrentRun()
- new methods SCIPaddDialogInputLine() and SCIPaddDialogHistoryLine()
- method SCIPgetNConflictClausesFound() renamed to SCIPgetNConflictConssFound()
- method SCIPgetNConflictClausesFoundNode() renamed to SCIPgetNConflictConssFoundNode()
- method SCIPgetNConflictClausesApplied() renamed to SCIPgetNConflictConssApplied()
- new method SCIPgetFocusDepth()
- methods SCIPisLbBetter() and SCIPisUbBetter() have an additional parameter and slightly different meaning
  (they now compare the bound improvement *relatively* to the width of the domain and the bound itself)
- new solution status code SCIP_STATUS_STALLNODELIMIT
- slightly modified semantics of the CONSINITLP callback in the constraint handlers
- marking a constraint to be "initial" now means in addition, that if the constraint is added to a local node
  it will enter the LP at the time the node is first processed, even if parameters forbid separation at this
  node
- SCIPgetNSols() now returns an int instead of SCIP_Longint
- new method SCIPtransformProb() to create the transformed problem; enables the user, e.g., to add primal solutions
  before the presolving begins